# mediguard_clinic_backend

./: docker-compose.yml  pyproject.toml
auth/: Dockerfile  alembic.ini  docker-compose.yml
auth/alembic/: env.py
auth/alembic/versions/: 03d52e40523e_.py  b20736c411c3_initial_migration.py
auth/app/: main.py
auth/app/api/: api.py
auth/app/models/: auth.py  base.py
auth/app/schemas/: __init__.py  auth.py
biosignal/: Dockerfile  docker-compose.yml
biosignal/alembic/: env.py
biosignal/alembic/versions/: 1075867e6c58_.py  3c3396264e68_.py  647f36695c66_.py  70a399aab85c_.py  ce6ef08136fa_.py
biosignal/app/: main.py
biosignal/app/api/: api.py
biosignal/app/models/: base.py  biosignal_enum.py  biosignals.py
biosignal/app/schemas/: biosignal.py
clinical_manage/: Dockerfile  docker-compose.yml  entrypoint.sh
clinical_manage/alembic/: env.py
common/core/: __init__.py  auth.py  config.py  kafka.py  kafka_consumer.py  kafka_producer.py  nickname.py  redis.py  security.py
common/db/: session.py
common/schemas/: events.py
consumer/: Dockerfile  docker-compose.yml  entrypoint.sh
consumer/app/: main.py
consumer_analysis/: Dockerfile  docker-compose.yml  entrypoint.sh
consumer_analysis/app/: main.py
consumer_db/: Dockerfile  docker-compose.yml  entrypoint.sh
consumer_db/app/: main.py
docs/: bp-sse-api.md
kafka/: docker-compose.yml
kong/: docker-compose.yml  kong.yml
notification/: Dockerfile  docker-compose.yml  entrypoint.sh
notification/app/: main.py
postgres/: docker-compose.yml
redis/: docker-compose.yml
(+32 files in other folders)
